--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "3.4"
+    "tailwindcss": "3.4",
+    "vite-plugin-pwa": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
